--- a/sample/platform/linux/optim/CMakeLists.txt
+++ b/sample/platform/linux/optim/CMakeLists.txt
@@ -39,5 +39,7 @@ FILE(GLOB SOURCE_FILES *.hpp *.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/../common/dji_linux_helpers.cpp
         )
 
+find_package( OpenCV REQUIRED )
+
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} djiosdk-core)
+target_link_libraries(${PROJECT_NAME} djiosdk-core ${OpenCV_LIBS} )
